# saferl-proof-stack

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CACHE_IMPLEMENTATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  coverage.xml  demo_cache_mutation.py  demo_cli.py  demo_complete_workflow.py  demo_compliance_mapping.py  demo_sprint2.py  lake-manifest.json  lakefile.lean  mkdocs.yml  pyproject.toml  run_tests.py  test_cache_basic.py  test_cli_workflow.py  test_multi_algo.py  test_pipeline.py  verify_setup.py
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
.hypothesis/constants/: 006a548ced55f04c  010cb28ed8976c08  0111c1fb9c822453  018b3dfef5d4cf44  02faccbac4865dc4  03928cd54a36b58b  03935b1dc5666dd1  0491aa3498a3636b  049aa60cf0ddc74f  04a93e7f55f5c434  04baa58f3e9e50f9  05912547ca536437  06f4ae5cdca886a4  071b944e3fb3c1a3  0768626d662eb901  07bb60a44e1582dc  07c81964c212a867  086fbb1ed44fc634  0874c8fcaa2d3785  0874dca2ad64e2c9  08947e2f448cec06  08c343135fc7801b  095f63a4f051760e  09f36cc3cb70f678  0a03c7991325232d  0aa70a764720c4b0  0adbc19feb75e545  0af750642137754f  0b0a1595afff60b8  0c0131e3e92f818c  0d870688437da519  0ddc05a58abf2bba  0df47b3e203d85f7  0ec4c61b1b2e0dac  0f1c9279f33633f0  112c075591fd4063  11905ea741213e9e  12bd1a7082afffe6  12fc351c58be0f2c  13a607f3e03051d2  (+428 more)
.hypothesis/examples/04e6b3400353b141/: 133667f297548b94  1501ce26fcea40da  5e75c6bc82e04235  5e9b6d08c8775c60  932476ed868f6b13  938b1a3812f8abd6  9e2af640335ef6a4  be37f172645dc9a9  cb26af147178f8b0  d517b6c515f1fcb6
.hypothesis/examples/133667f297548b94/: 42e4d25b0e59c6de
.hypothesis/examples/932476ed868f6b13/: a8539929d4598b80
.hypothesis/examples/9e2af640335ef6a4/: 375d4c2b5faddb76  4591822704a9f32d  47c763ced41d4549  5d59b45cbac8f5d9  5e1fa30aa7fe80b4  5f8e1e7953672784  742f9af763d22e5f  96a909d3de1b6687  a1ebc4e1229fb069  (+9 more)
.hypothesis/tmp/: tmp1ofud2f2  tmp7firdl7q  tmpkgw1xxhd  tmpu6fqy79s
.lake/: lakefile.olean  lakefile.olean.trace
attestation_bundle/: guard.c  lean_project.sha256
benchmarks/: test_pipeline_benchmark.py
docker/: ci.Dockerfile  lean.Dockerfile
docs/: api_reference.md  architecture.md  cli_reference.md  compliance.md  index.md
examples/: cartpole_safety.py  compressor_policy.py  compressor_station.py  generate_bundle.py  robotic_arm.py
guard_output/: guard.c
lean_output/: safety_proof.lean
opencontrol/: iec61508.yaml  iec62443.yaml
proofstack/: __init__.py  api.py  attestation.py  cache.py  cli.py  compliance_mapper.py  contracts.py  errors.py  guard_codegen.py  observability.py  pipeline.py  prover_api.py  specgen.py
proofstack/lean/: tactics.lean
rl/algorithms/: __init__.py
rl/wrappers/: __init__.py
specs/examples/: compressor_station.lean
specs/templates/: pressure_bounds.lean.ejs
test_cartpole/: README.md  env.py  safety_spec.yaml
tests/: conftest.py  test_api_integration.py  test_attestation.py  test_cache.py  test_guard_codegen.py  test_pipeline.py  test_prover_api.py  test_specgen.py
(+2 files in other folders)
